<resources>
    <string name="app_name">Hazard Zone Awarness</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="facility_phone_number">Facility Phone Number</string>
    <string name="hazard_severity">Hazard Severity</string>
    <string name="hazard_name">Hazard Name</string>
    <string name="hazard_zone_name">Hazard Zone Name</string>
    <string name="facility_name">Facility Name</string>
    <string name="beacon_id">Beacon ID</string>
    <string name="beacon_distance">Beacon Distance</string>
    <string name="beacon_battery">Beacon Battery</string>
</resources>
