<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="40dp"
    tools:context=".MainActivity">



    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="20dp"
        app:contentPadding="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txtFacilityName"
                android:layout_width="200dp"

                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:linksClickable="false"
                android:text="@string/facility_name"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtHazardZoneName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtFacilityName"
                android:linksClickable="false"
                android:text="@string/hazard_zone_name"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtHazardName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtHazardZoneName"
                android:linksClickable="false"
                android:text="@string/hazard_name"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtHazardSeverity"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtHazardName"
                android:linksClickable="false"
                android:text="@string/hazard_severity"
                android:textColor="#000"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/txtFacilityPhone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtHazardSeverity"
                android:linksClickable="false"
                android:text="@string/facility_phone_number"
                android:textColor="#000"
                android:singleLine="false"
                android:clickable="true"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtBeaconID"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="0dp"

                android:layout_marginRight="0dp"
                android:text="@string/beacon_id"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/txtBeaconDistance"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtBeaconID"

                android:layout_alignParentRight="true"

                android:text="@string/beacon_distance"
                android:textAlignment="textEnd" />

            <!--  <TextView
                  android:id="@+id/txtBeaconBattery"
                  android:layout_width="110dp"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/txtBeaconDistance"

                  android:layout_alignParentRight="true"

                  android:text="@string/beacon_battery"
                  android:textAlignment="textEnd"
                   /> -->



        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>